--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata&display=swap');
 
 body {
-  font-family: 'Inconsolata', monospace;  
+  font-family: 'Inconsolata', monospace; 
+  background-image: url("https://github.com/corgi912/portfolio/blob/master/hihibye.jpg?raw=true");
 }
 
 h1 {
