--- a/stylesheets.css
+++ b/stylesheets.css
@@ -9,10 +9,10 @@ h1 {
   font-style: italic;
   font-size: 50px;
   color: #33A2FF;
-  border: 5px dotted blue;
+  border: 5px dotted white;
 }
 
 p {
-  color: #33FFA2;
+  color: #0F0600;
 }
   
