--- a/stylesheets.css
+++ b/stylesheets.css
@@ -13,6 +13,26 @@ body {
   color: #091244
 }
 
+}
+
+.sports {
+  font-size: 50px;
+  color: #102178
+}
+
+
+}
+.animals {
+  font-size: 50px;
+  color: #152BAO
+} 
+
+}
+.food {
+  font-size: 50px;
+  color: #1C36C1
+}
+
 h1 {
   font-style: italic;
   font-size: 50px;
