--- a/stylesheets.css
+++ b/stylesheets.css
@@ -43,4 +43,29 @@ h1 {
 p {
   color: #0F0600;
 }
-  
+
+.navbar {
+  overflow: hidden;
+  background-color: #96DAE7;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.navbar a:hover {
+  background-color: #4011DA
+  color: #000000;
+}
+
+.navbar a.active {
+  background-color: #FFFFFF;
+  color: Black;
+}
+
