--- a/stylesheets.css
+++ b/stylesheets.css
@@ -10,27 +10,27 @@ body {
 
 .bigheading {
   font-size: 75px;
-  color: #091244
+  color: #091244;
 }
 
 }
 
 .sports {
   font-size: 50px;
-  color: #102178
+  color: #102178;
 }
 
 
 }
 .animals {
   font-size: 50px;
-  color: #152BAO
+  color: #152BAO;
 } 
 
 }
 .food {
   font-size: 50px;
-  color: #1C36C1
+  color: #1C36C1;
 }
 
 h1 {
